remove nevigation for others

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <!-- // NAVIGATION -->
       <nav>
-        <a class="button navlink" href="#other_pages">Other Pages</a><a class="button navlink" href="#interactive_elements">Interactive Elements</a><a class="button navlink" href="#text_elements">Text Elements</a><a class="button navlink" href="#combined_elements">Combined Elements</a>
+        <a class="button navlink" href="#interactive_elements">Interactive Elements</a><a class="button navlink" href="#text_elements">Text Elements</a><a class="button navlink" href="#combined_elements">Combined Elements</a>
       </nav>
       <!-- // NAVIGATION -->
 
