Edited index.html and main.css for semantic HTML. Product listings are now wrapped in <figure> tags and the text within is now wrapped in <figcaption> tags instead of <div> tags.

--- a/index.html
+++ b/index.html
@@ -224,23 +224,23 @@
               <p>.product-listing</p>
 
               <h4>Sample code:</h4>
-              <code>&lt;div class="product-listing"&gt;<br/>
+              <code>&lt;figure class="product-listing"&gt;<br/>
                 <span class="indent">&lt;img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat."&gt;</span><br/>
-                <span class="indent">&lt;div class="product-info"&gt;</span><br/>
+                <span class="indent">&lt;figcaption class="product-info"&gt;</span><br/>
                 <span class="indent-2">&lt;p class="product-name"&gt;Bike T-Shirt&lt;/p&gt;</span><br/>
                 <span class="indent-2">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
-                &lt;/div&gt;
+                <span class="indent">&lt;/figcaption&gt;</span><br/>
+                &lt;/figure&gt;
               </code>
 
             <h4>Rendered element:</h4>
-            <div class="product-listing">
+            <figure class="product-listing">
               <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
-              <div class="product-info">
+              <figcaption class="product-info">
                 <p class="product-name">Bike T-Shirt</p>
                 <p class="product-price">$24.99</p>
-              </div>
-            </div>
+              </figcaption>
+            </figure>
         </section>
 
         <!-- Grid Structure Styling Section -->
@@ -252,95 +252,95 @@
 
               <h4>Sample code:</h4>
               <code>&lt;div class="container"&gt;<br/>
-                <span class="indent">&lt;div class="product-listing container-item"&gt;</span><br/>
+                <span class="indent">&lt;figure class="product-listing container-item"&gt;</span><br/>
                   <span class="indent-2">&lt;img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat."&gt;</span><br/>
-                  <span class="indent-2">&lt;div class="product-info"&gt;</span><br/>
+                  <span class="indent-2">&lt;figcaption class="product-info"&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-name"&gt;Bike T-Shirt&lt;/p&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
-                  <span class="indent-2">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;div class="product-listing container-item"&gt;</span><br/>
+                  <span class="indent-2">&lt;/figcaption&gt;</span><br/>
+                <span class="indent">&lt;/figure&gt;</span><br/>
+                <span class="indent">&lt;figure class="product-listing container-item"&gt;</span><br/>
                   <span class="indent-2">&lt;img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food."&gt;</span><br/>
-                  <span class="indent-2">&lt;div class="product-info"&gt;</span><br/>
+                  <span class="indent-2">&lt;figcaption class="product-info"&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-name"&gt;Mountain T-Shirt&lt;/p&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
-                  <span class="indent-2">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;div class="product-listing container-item"&gt;</span><br/>
+                  <span class="indent-2">&lt;/figcaption&gt;</span><br/>
+                <span class="indent">&lt;/figure&gt;</span><br/>
+                <span class="indent">&lt;figure class="product-listing container-item"&gt;</span><br/>
                   <span class="indent-2">&lt;img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front."&gt;</span><br/>
-                  <span class="indent-2">&lt;div class="product-info"&gt;</span><br/>
+                  <span class="indent-2">&lt;figcaption class="product-info"&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-name"&gt;Picnic T-Shirt&lt;/p&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
-                  <span class="indent-2">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;div class="product-listing container-item"&gt;</span><br/>
+                  <span class="indent-2">&lt;/figcaption&gt;</span><br/>
+                <span class="indent">&lt;/figure&gt;</span><br/>
+                <span class="indent">&lt;figure class="product-listing container-item"&gt;</span><br/>
                   <span class="indent-2">&lt;img src="img/tshirt-trees.png" alt="T-shirt with walking trees on the front."&gt;</span><br/>
-                  <span class="indent-2">&lt;div class="product-info"&gt;</span><br/>
+                  <span class="indent-2">&lt;figcaption class="product-info"&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-name"&gt;Trees T-Shirt&lt;/p&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
-                  <span class="indent-2">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;div class="product-listing container-item"&gt;</span><br/>
+                  <span class="indent-2">&lt;/figcaption&gt;</span><br/>
+                <span class="indent">&lt;/figure&gt;</span><br/>
+                <span class="indent">&lt;figure class="product-listing container-item"&gt;</span><br/>
                   <span class="indent-2">&lt;img src="img/tshirt-ufo.png" alt="T-shirt with a UFO abducting a man on the front."&gt;</span><br/>
-                  <span class="indent-2">&lt;div class="product-info"&gt;</span><br/>
+                  <span class="indent-2">&lt;figcaption class="product-info"&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-name"&gt;UFO T-Shirt&lt;/p&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
-                  <span class="indent-2">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;div class="product-listing container-item"&gt;</span><br/>
+                  <span class="indent-2">&lt;/figcaption&gt;</span><br/>
+                <span class="indent">&lt;/figure&gt;</span><br/>
+                <span class="indent">&lt;figure class="product-listing container-item"&gt;</span><br/>
                   <span class="indent-2">&lt;img src="img/tshirt-falling.png" alt="T-shirt with two falling children on the front."&gt;</span><br/>
-                  <span class="indent-2">&lt;div class="product-info"&gt;</span><br/>
+                  <span class="indent-2">&lt;figcaption class="product-info"&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-name"&gt;Falling T-Shirt&lt;/p&gt;</span><br/>
                     <span class="indent-3">&lt;p class="product-price"&gt;$29.99&lt;/p&gt;</span><br/>
-                  <span class="indent-2">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
+                  <span class="indent-2">&lt;/figcaption&gt;</span><br/>
+                <span class="indent">&lt;/figure&gt;</span><br/>
               &lt;/div&gt;
               </code>
 
             <h4>Rendered element:</h4>
             <div class="container">
-              <div class="product-listing container-item">
+              <figure class="product-listing container-item">
                 <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
-                <div class="product-info">
+                <figcaption class="product-info">
                   <p class="product-name">Bike T-Shirt</p>
                   <p class="product-price">$24.99</p>
-                </div>
-              </div>
-              <div class="product-listing container-item">
+                </figcaption>
+              </figure>
+              <figure class="product-listing container-item">
                 <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
-                <div class="product-info">
+                <figcaption class="product-info">
                   <p class="product-name">Mountain T-Shirt</p>
                   <p class="product-price">$24.99</p>
-                </div>
-              </div>
-              <div class="product-listing container-item">
+                </figcaption>
+              </figure>
+              <figure class="product-listing container-item">
                 <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
-                <div class="product-info">
+                <figcaption class="product-info">
                   <p class="product-name">Picnic T-Shirt</p>
                   <p class="product-price">$24.99</p>
-                </div>
-              </div>
-              <div class="product-listing container-item">
+                </figcaption>
+              </figure>
+              <figure class="product-listing container-item">
                 <img src="img/tshirt-trees.png" alt="T-shirt with walking trees on the front.">
-                <div class="product-info">
+                <figcaption class="product-info">
                   <p class="product-name">Trees T-Shirt</p>
                   <p class="product-price">$24.99</p>
-                </div>
-              </div>
-              <div class="product-listing container-item">
+                </figcaption>
+              </figure>
+              <figure class="product-listing container-item">
                 <img src="img/tshirt-ufo.png" alt="T-shirt with a UFO abducting a man on the front.">
-                <div class="product-info">
+                <figcaption class="product-info">
                   <p class="product-name">UFO T-Shirt</p>
                   <p class="product-price">$24.99</p>
-                </div>
-              </div>
-              <div class="product-listing container-item">
+                </figcaption>
+              </figure>
+              <figure class="product-listing container-item">
                 <img src="img/tshirt-falling.png" alt="T-shirt with two falling children on the front.">
-                <div class="product-info">
+                <figcaption class="product-info">
                   <p class="product-name">Falling T-Shirt</p>
                   <p class="product-price">$29.99</p>
-                </div>
-              </div>
+                </figcaption>
+              </figure>
             </div>
         </section>
 
