Changed code block to properly reference the second button as <input type="reset"> instead of <input type="submit">

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <h4>Sample code:</h4>
             <code>&lt;input type="submit" class="button submit" value="Submit form"&gt;<br/>
-            &lt;input type="submit" class="button reset" value="Clear all"&gt;</code>
+            &lt;input type="reset" class="button reset" value="Clear all"&gt;</code>
 
             <h4>Rendered element:</h4>
             <input type="submit" class="button submit" value="Submit form">
