Added colour palette to style guide, and changed the checkout button to reflect that it is highlighted orange only when there is an item in the cart

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
         <h2 class="subheading">Interactive Elements</h2>
 
         <!-- Navigation and Checkout Button Styling Section -->
+
+        <section>
+          <h3>Colour Palette</h3>
+
+            <h4>Sample code:</h4>
+            <code>&lt;div class="button navlink" href=""&gt;Navigation Button&lt;/a&gt;<br/>
+              &lt;a class="button navlink checkout" href=""&gt;Checkout Button&lt;/a&gt;</code>
+
+            <h4>Rendered element:</h4>
+            <div class="colour-palette colour-teal"></div><div class="colour-palette colour-orange"></div><div class="colour-palette colour-lightgray"></div><div class="colour-palette colour-darkgray"></div><div class="colour-palette colour-darkestgray"></div>
+        </section>
+
         <section>
           <h3>Navigation and Checkout Button</h3>
             <h4>CSS selector:</h4>
@@ -207,12 +219,12 @@
               <span class="indent">&lt;a class="button navlink" href=""&gt;Current Styles&lt;/a&gt;</span><br/>
               <span class="indent">&lt;a class="button navlink" href=""&gt;Past Styles&lt;/a&gt;</span><br/>
               <span class="indent">&lt;a class="button navlink" href=""&gt;About&lt;/a&gt;</span><br/>
-              <span class="indent">&lt;a class="button navlink checkout" href=""&gt;Checkout&lt;/a&gt;</span><br/>
+              <span class="indent">&lt;a class="button navlink checkout" href=""&gt;Checkout (2)&lt;/a&gt;</span><br/>
             &lt;/nav&gt;</code>
 
             <h4>Rendered element:</h4>
             <nav>
-              <a class="button navlink" href="">Current Styles</a><a class="button navlink" href="">Past Styles</a><a class="button navlink" href="">About</a><a class="button navlink checkout" href="">Checkout</a>
+              <a class="button navlink" href="">Current Styles</a><a class="button navlink" href="">Past Styles</a><a class="button navlink" href="">About</a><a class="button navlink checkout" href="">Checkout (2)</a>
             </nav>
         </section>
 
