--- a/templates.html
+++ b/templates.html
@@ -18,10 +18,7 @@
     <nav class="fixed-nav-bar">
       <img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo.">
       <ul>
-        <li><a class="button navlink" href="">Current Styles</a></li>
-        <li><a class="button navlink" href="">Past Styles</a></li>
-        <li><a class="button navlink" href="">About</a></li>
-        <li><a class="button navlink checkout" href="">Checkout (2)</a></li>
+        <li><a class="button navlink" href="">Current Styles</a></li><li><a class="button navlink" href="">Past Styles</a></li><li><a class="button navlink" href="">About</a></li><li><a class="button navlink checkout" href="">Checkout (2)</a></li>
       </ul>
     </nav>
 
