Added a responsive form template to index.html. Submit/reset buttons and form fields take 100% at a certain width.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               &lt;input type="text" class="textfield" placeholder="Enter your name here" id="input-first-name"&gt;</code>
 
             <h4>Rendered element:</h4>
-            <label class="textfield-label" for="text-input-field">Name</label>
+            <label class="textfield-label" for="input-first-name">Name</label>
             <input type="text" class="textfield" placeholder="Enter your name here" id="input-first-name">
         </section>
 
@@ -366,6 +366,9 @@
         <section>
           <h3>Navigation Bar</h3>
 
+            <h4>CSS selector:</h4>
+            <p>.fixed-nav-bar</p>
+
             <h4>Sample code:</h4>
             <code>&lt;nav class="fixed-nav-bar"&gt;<br/>
               <span class="indent">&lt;img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."&gt;</span><br/>
@@ -380,6 +383,41 @@
             <h4>Rendered element:</h4>
             <p>See navigation bar at the top of the page</p>
         </section>
+
+        <!-- Form -->
+
+        <section>
+          <h3>Form</h3>
+
+            <h4>CSS selector:</h4>
+            <p>form</p>
+
+            <h4>Sample code:</h4>
+            <code>&lt;form&gt;<br/>
+              <span class="indent">&lt;label class="textfield-label" for="input-name"&gt;Name&lt;/label&gt;</span><br/>
+              <span class="indent">&lt;input type="text" class="textfield" placeholder="Name" id="input-name"&gt;</span><br/>
+              <span class="indent">&lt;label class="textfield-label" for="input-email"&gt;Email Address&lt;/label&gt;</span><br/>
+              <span class="indent">&lt;input type="text" class="textfield" placeholder="Email Address" id="input-email"&gt;</span><br/>
+              <span class="indent">&lt;label class="textfield-label" for="input-review"&gt;Leave A Review&lt;/label&gt;</span><br/>
+              <span class="indent">&lt;textarea class="textfield" id="input-review" placeholder="Leave A Review"&gt;&lt;/textarea&gt;</span><br/>
+              <span class="indent">&lt;input type="submit" class="button submit" value="Submit form"&gt;</span><br/>
+              <span class="indent">&lt;input type="reset" class="button reset" value="Clear all"&gt; </span><br/>
+            &lt;/form&gt;</code>
+
+            <h4>Rendered element:</h4>
+            <form>
+              <label class="textfield-label" for="input-name">Name</label>
+              <input type="text" class="textfield" placeholder="Name" id="input-name">
+              <label class="textfield-label" for="input-email">Email Address</label>
+              <input type="text" class="textfield" placeholder="Email Address" id="input-email">
+              <label class="textfield-label" for="input-review">Leave A Review</label>
+              <textarea class="textfield" id="input-review" placeholder="Leave A Review"></textarea>
+              <input type="submit" class="button submit" value="Submit form">
+              <input type="reset" class="button reset" value="Clear all"> 
+            </form>
+        </section>
+
+        <!-- TEMPLATES SECTION // -->
 
     </div>
   </body>
