Added the cart item template to index.html

--- a/index.html
+++ b/index.html
@@ -417,6 +417,53 @@
             </form>
         </section>
 
+        <!-- Cart Item -->
+
+        <section>
+          <h3>Cart Item</h3>
+
+            <h4>CSS selector:</h4>
+            <p>form</p>
+
+            <h4>Sample code:</h4>
+            <code>&lt;form&gt;<br/>
+              <span class="indent">&lt;label class="textfield-label" for="input-name"&gt;Name&lt;/label&gt;</span><br/>
+              <span class="indent">&lt;input type="text" class="textfield" placeholder="Name" id="input-name"&gt;</span><br/>
+              <span class="indent">&lt;label class="textfield-label" for="input-email"&gt;Email Address&lt;/label&gt;</span><br/>
+              <span class="indent">&lt;input type="text" class="textfield" placeholder="Email Address" id="input-email"&gt;</span><br/>
+              <span class="indent">&lt;label class="textfield-label" for="input-review"&gt;Leave A Review&lt;/label&gt;</span><br/>
+              <span class="indent">&lt;textarea class="textfield" id="input-review" placeholder="Leave A Review"&gt;&lt;/textarea&gt;</span><br/>
+              <span class="indent">&lt;input type="submit" class="button submit" value="Submit form"&gt;</span><br/>
+              <span class="indent">&lt;input type="reset" class="button reset" value="Clear all"&gt; </span><br/>
+            &lt;/form&gt;</code>
+
+            <h4>Rendered element:</h4>
+            <div class="cart-item">
+              <div class="cart-item-box">
+                <div class="placeholder-img-cart-item"></div>
+                <dl class="container cart-item-info">
+                  <div class="container-item">
+                    <dt>Colour</dt>
+                    <dd>Red</dd>
+                  </div>
+                  <div class="container-item">
+                    <dt>Size</dt>
+                    <dd>XS</dd>
+                  </div>
+                  <div class="container-item">
+                    <dt>Quantity</dt>
+                    <dd>1</dd>
+                  </div>
+                  <div class="container-item">
+                    <dt>Price</dt>
+                    <dd>$29.99</dd>
+                  </div>
+                </dl>
+              </div>
+              <a class="button edit" href="">Edit</a>
+              <a class="button delete" href="">Delete</a>
+            </div>
+
         <!-- TEMPLATES SECTION // -->
 
     </div>
