Added basic grid structure - 33/66 grid with image (33%) and text (66%) using flexbox

--- a/index.html
+++ b/index.html
@@ -542,6 +542,49 @@
             </div>
         </section>
 
+        <!-- 2-Column Image Row -->
+
+        <section>
+          <h3>2-Column Image Row</h3>
+
+            <h4>CSS selector:</h4>
+            <p>.fixed-nav-bar</p>
+
+            <h4>Sample code:</h4>
+            <code>&lt;nav class="fixed-nav-bar"&gt;<br/>
+              <span class="indent">&lt;img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."&gt;</span><br/>
+              <span class="indent">&lt;ul&gt;</span><br/>
+                <span class="indent-2">&lt;li&gt;&lt;a class="button navlink" href=""&gt;Current Styles&lt;/a&gt;&lt;/li&gt;</span><br/>
+                <span class="indent-2">&lt;li&gt;&lt;a class="button navlink" href=""&gt;Past Styles&lt;/a&gt;&lt;/li&gt;</span><br/>
+                <span class="indent-2">&lt;li&gt;&lt;a class="button navlink" href=""&gt;About&lt;/a&gt;&lt;/li&gt;</span><br/>
+                <span class="indent-2">&lt;li&gt;&lt;a class="button navlink checkout" href=""&gt;Checkout (2)&lt;/a&gt;&lt;/li&gt;</span><br/>
+              <span class="indent">&lt;/ul&gt;</span><br/>
+            &lt;/nav&gt;</code>
+
+            <h4>Rendered element:</h4>
+            <div class="container more-below">
+              <div class="container-item col-1of3">
+                <div class="img-filler"></div>
+              </div>
+              <div class="container-item col-2of3">
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+
+            <div class="container">
+              <div class="container-item col-2of3">
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+              <div class="container-item col-1of3">
+                <div class="img-filler"></div>
+              </div>
+            </div>
+        </section>
+
+      </section>
+
         <!-- TEMPLATES SECTION // -->
 
     </div>
